# riccardo_giacchino_master_thesis

./: .gitignore  CMakeLists.txt  README.md  package.xml
CentauroConfig/: README.md  centauro_basic_copy.yaml  centauro_cartesian_impedance.yaml  new_centauro_config.yaml  roll_pitch_controller_config.yaml  stack_problem.yaml
include/package_first/: basestategetter.h  cartesianimpedancecontroller.h  cartesianimpedancesolver.h  controllermanager.h  emafilter.h  grahamscanconvexhull.h  legcartesianimpcontroller.h  lowpassfilter.h  motiongenerator.h  stability_compensation.h
launch/: total_launch.launch
msg/: CartesianController.msg  Custom_torque.msg  Custom_torque_msg  README.md  RollPitchController.msg
src/: emafilter.cpp  leg_motion.cpp  lowpassfilter.cpp  motiongenerator.cpp  raise_one_leg.cpp  setup.cpp  stability_node.cpp  velocity_controller_node.cpp
src/cartesian_impedance_controller/: README.md  cartesianimpedancecontroller.cpp  cartesianimpedancesolver.cpp  cartesio_ros_wrapper.h  centauro_basic_copy.yaml  cic_main.cpp  controllermanager.cpp  legcartesianimpcontroller.cpp  roll_pitch_controller_config.yaml  stability_compensation.cpp  stack_problem.yaml
src/learning_src/: base_motion.cpp  basestategetter.cpp  grahamscanconvexhull.cpp  main_base_motion.cpp  moving_model.cpp  stability_node.cpp  velocity_controller_node.cpp
src/pb_description_yaml/: fl_leg.yaml  fr_leg.yaml  pb_def_mov.yaml  pb_des_leg.yaml  problem_des.yaml  rl_leg.yaml  rr_leg.yaml
